deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test       
  labels:
    app: nginx      
spec:
  strategy:          
    rollingUpdate:
      maxSurge: 1     #表示最大存在的pod等于 副本数加1
      maxUnavailable: 0     #表示最少的的pod等于 pod副本数不变
  replicas: 2
  selector:
    matchLabels:
      app: nginx-container     #deploy 基于这个标签选择器来选择下面template创建的容器
  template:
    metadata:
      labels:
        app: nginx-container    #容器标签对应上面的matchlabels
    spec:
      restartPolicy: OnFailure   #pod的重启策略  onfailure表示非正常退出的时候显示
      nodeSelector:            
        app: node3
      volumes:
      - name: storageclass-test
        persistentVolumeClaim:      
          claimName: index-storage 
          readOnly: ReadWriteMany  
      - name: host-mnt
        hostPath:    
          path: /test-nginx         
          type: DirectoryOrCreate   #这个type表示如果宿主机上面没有这个目录的话会自动创建
      - name: nginx-conf
        configMap:   
          name: nginx-conf        
      containers:
      - name: nginx-con       
        image: sjl-nginx     
        imagePullPolicy: IfNotPresent     #imagePullpolicy镜像拉取策略，IfNotPresent表示如果本地没有的话就会拉取上面指定的镜像，
                                                                 #还有Never策略这个策略表示只在本地找上面指定的镜像
                                                                 #还有Always策略这个策略表示只拉取上面指定的镜像
        volumeMounts:
        - name: storageclass-test                                 #上面定义的卷的名字
          mountPath: /usr/share/nginx/html/                       #挂载的目录
        - name: host-mnt
          mountPath: /mnt
        - name: nginx-conf
          mountPath: /etc/nginx/
        startupProbe:                                             #启动探测
          httpGet:                                               
            port: 80                                              
            scheme: HTTP                                          
            path: /                                              
          initialDelaySeconds: 5                                  
          successThreshold: 5                                     #这个表示探测成功5秒之后
          timeoutSeconds: 2                                       #超时时间  比如就是curl 网站ip 然后请求超时的时候
        ports:
        - containerPort: 80
