pod.yaml
kind: Pod             
apiVersion: v1        
metadata:  # 属性信息，元数据，包括名字和其他标识符等。这些信息对于识别和管理Pod很有用
  name: myweb         
spec:                 # 资源的特性描述（规约），定义Pod具体行为的部分
  containers: 
  - name: webserver
    image: myos:nginx 
    command: ["/bin/bash"]
    args:
    - -c
    - |
        while sleep 5;do
            echo "hello world"
        done
