statefullset.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
     app: nginx
spec:
  ports:
  - port: 80
    name: web
  clusterIP: None             #statefullset的service的ip设置成none没有ip
  selector:
    app: nginx
