ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-myapp
  namespace: default
spec:
  ingressClassName: nginx           #指定ingress控制器
  rules:
  - host: sjl.caddy.com           #域名
    http:
      paths:
      - backend:
         service:
           name: caddy
           port:
            number: 80
        path: /
        pathType: Prefix       #根据url的/前缀进行匹配
